--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev:dsp": "node scripts/dev-dsp.js",
     "dev:ui": "cd ui && npx vite",
     "build:dsp": "node -e \"process.platform === 'win32' ? require('child_process').execSync('powershell -File scripts/build-dsp.ps1', {stdio:'inherit'}) : require('child_process').execSync('bash scripts/build-dsp.sh', {stdio:'inherit'})\"",
+    "test:dsp": "cd dsp && moon test",
     "build:ui": "cd ui && cross-env VITE_BUILD_TARGET=juce npx vite build",
     "build:ui:web": "cd ui && npx vite build",
     "build:plugin": "cmake --build build --config Release",
