--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build:ui:web": "cd ui && npx vite build",
     "build:plugin": "cmake --build build --config Release",
     "configure:plugin": "cmake -B build -DCMAKE_BUILD_TYPE=Release",
-    "release:vst": "npm run build:dsp && npm run build:ui && npm run build:plugin"
+    "configure:plugin:unity": "cmake -B build -DCMAKE_BUILD_TYPE=Release -DMOONVST_ENABLE_UNITY=ON",
+    "release:vst": "npm run build:dsp && npm run build:ui && npm run build:plugin",
+    "release:unity": "npm run build:dsp && npm run build:ui && npm run configure:plugin:unity && npm run build:plugin"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
