--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test:dsp": "cd dsp && moon test",
     "build:ui": "cd ui && cross-env VITE_BUILD_TARGET=juce npx vite build",
     "build:ui:web": "cd ui && npx vite build",
+    "test:ui": "cd ui && npm run test:ui",
+    "test:ui:unit": "cd ui && npm run test:unit",
+    "test:ui:component": "cd ui && npm run test:component",
+    "test:ui:e2e": "cd ui && npm run test:e2e",
     "build:plugin": "cmake --build build --config Release",
     "configure:plugin": "cmake -B build -DCMAKE_BUILD_TYPE=Release",
     "configure:plugin:unity": "cmake -B build -DCMAKE_BUILD_TYPE=Release -DMOONVST_ENABLE_UNITY=ON",
