--- a/ui/package.json
+++ b/ui/package.json
@@ -7,19 +7,31 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "build:juce": "cross-env VITE_BUILD_TARGET=juce tsc && cross-env VITE_BUILD_TARGET=juce vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:ui": "vitest run",
+    "test:ui:watch": "vitest",
+    "test:unit": "vitest run --config vitest.unit.config.ts",
+    "test:component": "vitest run --config vitest.component.config.ts",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.2",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
     "cross-env": "^7.0.3",
+    "fake-indexeddb": "^6.2.5",
+    "jsdom": "^28.1.0",
     "typescript": "^5.6.3",
     "vite": "^6.0.0",
-    "vite-plugin-singlefile": "^2.0.3"
+    "vite-plugin-singlefile": "^2.0.3",
+    "vitest": "^4.0.18"
   }
 }
