--- a/ui/package.json
+++ b/ui/package.json
@@ -26,6 +26,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^4.0.18",
     "cross-env": "^7.0.3",
     "fake-indexeddb": "^6.2.5",
     "jsdom": "^28.1.0",
