Align CI build with README setup and Unity artifacts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,56 +14,31 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Install MoonBit
-        run: |
-          curl -fsSL https://cli.moonbitlang.com/install/unix.sh | bash
-          echo "$HOME/.moon/bin" >> $GITHUB_PATH
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      - name: Install LLVM
-        run: brew install llvm@18
-
-      - name: Setup WAMR
-        run: |
-          # Build libiwasm
-          cd libs/wamr/product-mini/platforms/darwin
-          mkdir -p build && cd build
-          cmake .. -DWAMR_BUILD_AOT=1 -DWAMR_BUILD_INTERP=0 -DWAMR_BUILD_LIBC_BUILTIN=1 -DWAMR_BUILD_LIBC_WASI=0
-          make -j$(sysctl -n hw.ncpu)
-
-          # Build wamrc
-          LLVM_DIR="$(brew --prefix llvm@18)/lib/cmake/llvm"
-          cd ${{ github.workspace }}/libs/wamr/wamr-compiler
-          mkdir -p build && cd build
-          cmake .. -DWAMR_BUILD_WITH_CUSTOM_LLVM=1 -DLLVM_DIR="$LLVM_DIR"
-          make -j$(sysctl -n hw.ncpu)
+      - name: Run macOS setup script
+        run: bash scripts/setup-macos.sh
 
       - name: Build DSP
-        run: bash scripts/build-dsp.sh
-
-      - name: Install UI dependencies
-        run: |
-          npm install
-          cd ui && npm install
+        run: npm run build:dsp
 
       - name: Build UI
         run: npm run build:ui
 
       - name: Configure plugin
-        run: cmake -B build -DCMAKE_BUILD_TYPE=Release
+        run: npm run configure:plugin:unity
 
       - name: Build plugin
-        run: cmake --build build --config Release
+        run: npm run build:plugin
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: webvst-macos
-          path: build/plugin/WebVST_artefacts/Release/
+          path: build/plugin/MoonVST_artefacts/Release/
 
   build-windows:
     runs-on: windows-latest
@@ -72,80 +47,29 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Install MoonBit
-        shell: pwsh
-        run: |
-          irm https://cli.moonbitlang.com/install/powershell.ps1 | iex
-          echo "$env:USERPROFILE\.moon\bin" | Out-File -Append $env:GITHUB_PATH
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      - name: Download LLVM
+      - name: Run Windows setup script
         shell: pwsh
-        run: |
-          $LlvmVersion = "18.1.8"
-          $LlvmArchive = "clang+llvm-$LlvmVersion-x86_64-pc-windows-msvc.tar.xz"
-          $LlvmUrl = "https://github.com/llvm/llvm-project/releases/download/llvmorg-$LlvmVersion/$LlvmArchive"
-          $DepsDir = "libs/wamr/core/deps"
-
-          mkdir -Force $DepsDir | Out-Null
-          Write-Host "Downloading $LlvmArchive..."
-          Invoke-WebRequest -Uri $LlvmUrl -OutFile "$DepsDir/$LlvmArchive" -UseBasicParsing
-          cd $DepsDir
-          tar xf $LlvmArchive
-          mkdir -Force llvm | Out-Null
-          Move-Item "clang+llvm-$LlvmVersion-x86_64-pc-windows-msvc" "llvm/build"
-          Remove-Item $LlvmArchive -Force
-          # Patch LLVM cmake config for local environment
-          $exports = "llvm/build/lib/cmake/llvm/LLVMExports.cmake"
-          $c = (Get-Content $exports -Raw)
-          $c = $c.Replace('"LibXml2::LibXml2;LLVMSupport"', '"LLVMSupport"')
-          $dia = Get-ChildItem "C:/Program Files/Microsoft Visual Studio" -Recurse -Filter "diaguids.lib" -EA SilentlyContinue | Where-Object { $_.FullName -match "amd64" } | Select-Object -First 1
-          if (-not $dia) { $dia = Get-ChildItem "C:/Program Files (x86)/Microsoft Visual Studio" -Recurse -Filter "diaguids.lib" -EA SilentlyContinue | Where-Object { $_.FullName -match "amd64" } | Select-Object -First 1 }
-          if ($dia) { $c = $c -replace 'C:/Program Files \(x86\)/Microsoft Visual Studio/[^;"]*/DIA SDK/lib/amd64/diaguids\.lib', $dia.FullName.Replace('\', '/') }
-          Set-Content $exports $c -NoNewline
-          $cfg = "llvm/build/lib/cmake/llvm/LLVMConfig.cmake"
-          $c = (Get-Content $cfg -Raw).Replace('set(LLVM_ENABLE_LIBXML2 1)', 'set(LLVM_ENABLE_LIBXML2 0)')
-          Set-Content $cfg $c -NoNewline
-
-      - name: Setup WAMR
-        shell: pwsh
-        run: |
-          # Build iwasm.lib
-          cd libs/wamr/product-mini/platforms/windows
-          mkdir build -Force; cd build
-          cmake .. -DWAMR_BUILD_AOT=1 -DWAMR_BUILD_INTERP=0 -DWAMR_BUILD_LIBC_BUILTIN=1 -DWAMR_BUILD_LIBC_WASI=0
-          cmake --build . --config Release
-
-          # Build wamrc
-          cd ${{ github.workspace }}/libs/wamr/wamr-compiler
-          mkdir build -Force; cd build
-          cmake ..
-          cmake --build . --config Release
+        run: powershell -ExecutionPolicy Bypass -File scripts/setup-windows.ps1
 
       - name: Build DSP
-        shell: pwsh
-        run: powershell -File scripts/build-dsp.ps1
-
-      - name: Install UI dependencies
-        run: |
-          npm install
-          cd ui && npm install
+        run: npm run build:dsp
 
       - name: Build UI
         run: npm run build:ui
 
       - name: Configure plugin
-        run: cmake -B build -DCMAKE_BUILD_TYPE=Release
+        run: npm run configure:plugin:unity
 
       - name: Build plugin
-        run: cmake --build build --config Release
+        run: npm run build:plugin
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: webvst-windows
-          path: build/plugin/WebVST_artefacts/Release/
+          path: build/plugin/MoonVST_artefacts/Release/
