--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "moonvst",
   "version": "0.1.0",
   "private": true,
+  "license": "Apache-2.0",
   "scripts": {
     "dev": "npm-run-all --parallel dev:dsp dev:ui",
     "dev:dsp": "node scripts/dev-dsp.js",
