--- a/tests/cpp/CMakeLists.txt
+++ b/tests/cpp/CMakeLists.txt
@@ -1,5 +1,9 @@
 enable_testing()
 
+if(NOT DEFINED WAMR_ROOT)
+    set(WAMR_ROOT ${CMAKE_SOURCE_DIR}/libs/wamr)
+endif()
+
 add_executable(wasm_dsp_test wasm_dsp_test.cpp)
 
 target_include_directories(wasm_dsp_test PRIVATE
@@ -11,22 +15,23 @@ target_include_directories(wasm_dsp_test PRIVATE
 if(APPLE)
     set(WAMR_TEST_LIB ${WAMR_ROOT}/product-mini/platforms/darwin/build/libiwasm.a)
 elseif(WIN32)
-    set(WAMR_TEST_LIB ${WAMR_ROOT}/product-mini/platforms/windows/build/Release/iwasm.lib)
+    set(WAMR_TEST_LIB ${WAMR_ROOT}/product-mini/platforms/windows/build/Release/libiwasm.lib)
 else()
     set(WAMR_TEST_LIB ${WAMR_ROOT}/product-mini/platforms/linux/build/libiwasm.a)
 endif()
 
 target_link_libraries(wasm_dsp_test PRIVATE
     ${WAMR_TEST_LIB}
+    juce::juce_audio_basics
 )
 
 if(NOT WIN32)
     target_link_libraries(wasm_dsp_test PRIVATE pthread m dl)
 endif()
 
-target_sources(wasm_dsp_test PRIVATE
-    ${CMAKE_SOURCE_DIR}/plugin/src/WasmDSP.cpp
-)
+if(WIN32)
+    target_compile_definitions(wasm_dsp_test PRIVATE WASM_RUNTIME_API_EXTERN=)
+endif()
 
 # Copy AOT binary for testing
 add_custom_command(TARGET wasm_dsp_test POST_BUILD
@@ -36,3 +41,16 @@ add_custom_command(TARGET wasm_dsp_test POST_BUILD
 )
 
 add_test(NAME WasmDSPTest COMMAND wasm_dsp_test)
+
+add_executable(plugin_smoke_test plugin_smoke_test.cpp)
+
+target_include_directories(plugin_smoke_test PRIVATE
+    ${CMAKE_SOURCE_DIR}/plugin/src
+    ${CMAKE_SOURCE_DIR}/libs/juce/modules
+)
+
+target_link_libraries(plugin_smoke_test PRIVATE
+    MoonVST
+)
+
+add_test(NAME PluginSmokeTest COMMAND plugin_smoke_test)
