--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "private": true,
   "license": "Apache-2.0",
   "scripts": {
-    "dev": "npm-run-all --parallel dev:dsp dev:ui",
-    "dev:dsp": "node scripts/dev-dsp.js",
+    "dev": "cross-env MOONVST_PRODUCT=template npm-run-all --parallel dev:dsp:product dev:ui",
+    "dev:dsp": "npm run dev:dsp:product",
+    "dev:dsp:product": "node scripts/dev-dsp.js",
+    "dev:dsp:showcase": "cross-env MOONVST_PRODUCT=showcase node scripts/dev-dsp.js",
     "dev:ui": "cd ui && npx vite",
-    "build:dsp": "node -e \"process.platform === 'win32' ? require('child_process').execSync('powershell -File scripts/build-dsp.ps1', {stdio:'inherit'}) : require('child_process').execSync('bash scripts/build-dsp.sh', {stdio:'inherit'})\"",
-    "test:dsp": "cd dsp && moon test",
+    "dev:ui:showcase": "cd ui && cross-env VITE_PRODUCT=showcase npx vite",
+    "dev:showcase": "cross-env MOONVST_PRODUCT=showcase npm-run-all --parallel dev:dsp:showcase dev:ui:showcase",
+    "build:dsp": "cross-env MOONVST_PRODUCT=template node scripts/build-dsp-product.js",
+    "build:dsp:showcase": "cross-env MOONVST_PRODUCT=showcase node scripts/build-dsp-product.js",
+    "test:dsp": "cross-env MOONVST_PRODUCT=template node scripts/select-product.js --product template && cd dsp && moon test",
+    "test:dsp:showcase": "cross-env MOONVST_PRODUCT=showcase node scripts/select-product.js --product showcase && cd dsp && moon test",
     "build:ui": "cd ui && cross-env VITE_BUILD_TARGET=juce npx vite build",
+    "build:ui:showcase": "cd ui && cross-env VITE_PRODUCT=showcase cross-env VITE_BUILD_TARGET=juce npx vite build",
     "build:ui:web": "cd ui && npx vite build",
     "test:ui": "cd ui && npm run test:ui",
     "test:ui:unit": "cd ui && npm run test:unit",
@@ -19,7 +26,9 @@
     "configure:plugin": "cmake -B build -DCMAKE_BUILD_TYPE=Release",
     "configure:plugin:unity": "cmake -B build -DCMAKE_BUILD_TYPE=Release -DMOONVST_ENABLE_UNITY=ON",
     "release:vst": "npm run build:dsp && npm run build:ui && npm run build:plugin",
-    "release:unity": "npm run build:dsp && npm run build:ui && npm run configure:plugin:unity && npm run build:plugin"
+    "release:vst:showcase": "npm run build:dsp:showcase && npm run build:ui:showcase && npm run build:plugin",
+    "release:unity": "npm run build:dsp && npm run build:ui && npm run configure:plugin:unity && npm run build:plugin",
+    "scaffold:product": "node scripts/scaffold-product.js"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
