--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -17,5 +17,5 @@
     "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src"]
+  "include": ["src", "../products/**/*.ts", "../products/**/*.tsx", "../packages/**/*.ts", "../packages/**/*.tsx"]
 }
