--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
     "dev:dsp": "npm run dev:dsp:product",
     "dev:dsp:product": "node scripts/dev-dsp.js",
     "dev:dsp:showcase": "cross-env MOONVST_PRODUCT=showcase node scripts/dev-dsp.js",
-    "dev:ui": "cd ui && npx vite",
-    "dev:ui:showcase": "cd ui && cross-env VITE_PRODUCT=showcase npx vite",
+    "dev:ui": "cd packages/ui-core && npx vite",
+    "dev:ui:showcase": "cd packages/ui-core && cross-env VITE_PRODUCT=showcase npx vite",
     "dev:showcase": "cross-env MOONVST_PRODUCT=showcase npm-run-all --parallel dev:dsp:showcase dev:ui:showcase",
     "build:dsp": "cross-env MOONVST_PRODUCT=template node scripts/build-dsp-product.js",
     "build:dsp:showcase": "cross-env MOONVST_PRODUCT=showcase node scripts/build-dsp-product.js",
-    "test:dsp": "cross-env MOONVST_PRODUCT=template node scripts/select-product.js --product template && cd dsp && moon test",
-    "test:dsp:showcase": "cross-env MOONVST_PRODUCT=showcase node scripts/select-product.js --product showcase && cd dsp && moon test",
-    "build:ui": "cd ui && cross-env VITE_BUILD_TARGET=juce npx vite build",
-    "build:ui:showcase": "cd ui && cross-env VITE_PRODUCT=showcase cross-env VITE_BUILD_TARGET=juce npx vite build",
-    "build:ui:web": "cd ui && npx vite build",
-    "test:ui": "cd ui && npm run test:ui",
-    "test:ui:unit": "cd ui && npm run test:unit",
-    "test:ui:component": "cd ui && npm run test:component",
-    "test:ui:e2e": "cd ui && npm run test:e2e",
+    "test:dsp": "cross-env MOONVST_PRODUCT=template node scripts/select-product.js --product template && cd packages/dsp-core && moon test",
+    "test:dsp:showcase": "cross-env MOONVST_PRODUCT=showcase node scripts/select-product.js --product showcase && cd packages/dsp-core && moon test",
+    "build:ui": "cd packages/ui-core && cross-env VITE_BUILD_TARGET=juce npx vite build",
+    "build:ui:showcase": "cd packages/ui-core && cross-env VITE_PRODUCT=showcase cross-env VITE_BUILD_TARGET=juce npx vite build",
+    "build:ui:web": "cd packages/ui-core && npx vite build",
+    "test:ui": "cd packages/ui-core && npm run test:ui",
+    "test:ui:unit": "cd packages/ui-core && npm run test:unit",
+    "test:ui:component": "cd packages/ui-core && npm run test:component",
+    "test:ui:e2e": "cd packages/ui-core && npm run test:e2e",
     "build:plugin": "cmake --build build --config Release",
     "configure:plugin": "cmake -B build -DCMAKE_BUILD_TYPE=Release",
     "configure:plugin:unity": "cmake -B build -DCMAKE_BUILD_TYPE=Release -DMOONVST_ENABLE_UNITY=ON",
